--- a/docs-site/i18n/es/docusaurus-theme-classic/footer.json
+++ b/docs-site/i18n/es/docusaurus-theme-classic/footer.json
@@ -18,5 +18,25 @@
   "copyright": {
     "message": "Copyright © 2026 Lana Bank. Construido con Docusaurus.",
     "description": "The footer copyright"
+  },
+  "link.title.API": {
+    "message": "API",
+    "description": "The title of the footer links column with title=API in the footer"
+  },
+  "link.item.label.API Reference": {
+    "message": "API Reference",
+    "description": "The label of footer link with label=API Reference linking to /api"
+  },
+  "link.item.label.Admin API": {
+    "message": "Admin API",
+    "description": "The label of footer link with label=Admin API linking to /api/admin"
+  },
+  "link.item.label.Customer API": {
+    "message": "Customer API",
+    "description": "The label of footer link with label=Customer API linking to /api/customer"
+  },
+  "link.item.label.Domain Events": {
+    "message": "Domain Events",
+    "description": "The label of footer link with label=Domain Events linking to /api/events"
   }
 }
