--- a/docs-site/i18n/es/docusaurus-theme-classic/navbar.json
+++ b/docs-site/i18n/es/docusaurus-theme-classic/navbar.json
@@ -10,5 +10,9 @@
   "item.label.GitHub": {
     "message": "GitHub",
     "description": "Navbar item with label GitHub"
+  },
+  "item.label.API Reference": {
+    "message": "Referencia de API",
+    "description": "Navbar item with label API Reference"
   }
 }
